--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-.carousel-item{
-    align-items: center;
+
+
+.navbarText{
+    color: #f0ad4e ;
 }
 
+
+.card{
+    background-color: sandybrown;
+}
